# KMing-L_lying-docs

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: backends.md  cli.md  configuration.md
docs/guides/: github-actions.md
lyingdocs/: __init__.py  __main__.py  agent.py  argus.py  argus_claude_code.py  argus_local.py  cli.py  codex.py  config.py  doctree.py  hermes_agent.py  init_ci.py  llm.py  tools.py  workspace.py
lyingdocs/prompts/: agent_system.txt  argus_local_system.txt  codex_task.txt  report_synthesis.txt
tests/: README.md
tests/configs/: anthropic.toml  claude_code.toml  codex.toml  local.toml
tests/fixture/code/: app.py
tests/fixture/docs/: README.md
